Feat: 수정사항 적용

--- a/src/main/resources/templates/user/common/fragments/config.html
+++ b/src/main/resources/templates/user/common/fragments/config.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" href="/user/common/css/footer.css">
 	<link rel="stylesheet" href="/user/common/css/mypage.css">
 	<link rel="stylesheet" href="/user/common/css/common.css">
+	<link rel="stylesheet" href="/user/common/css/modal.css" />
 
 	<!-- 폰트어썸 -->
 	<script src="https://kit.fontawesome.com/d95a86acc3.js"></script>
