--- a/src/main/resources/templates/user/common/layout/mainLayout.html
+++ b/src/main/resources/templates/user/common/layout/mainLayout.html
@@ -2,8 +2,9 @@
 <html lang="ko"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-
+      
 <head th:replace="~{/user/common/fragments/config :: ConfigFragment}"></head>
+
 
 <body>
 <header th:insert="~{/user/common/fragments/header :: HeaderFragment}"></header>
@@ -18,6 +19,7 @@
 </div>
 <footer th:insert="~{/user/common/fragments/footer :: FooterFragment}"></footer>
 
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 <script src="/user/common/js/main.js"></script>
 <script src="/user/common/js/btn-event.js"></script>
 <script src="/user/common/js/header.js"></script>
