--- a/src/main/resources/templates/user/common/fragments/header.html
+++ b/src/main/resources/templates/user/common/fragments/header.html
@@ -71,8 +71,8 @@
 </div>
 
 <!-- 전체 카테고리 모달-->
-<div id="myModal" class="modal">
-	<div class="modal-content">
+<div id="categoryModal" class="all-category-modal">
+	<div class="category-modal-content">
 		<div class="modal-category-list">
 			<div class="modal-category-item-wrap">
 				<a href="" class="modal-category-item active">국내도서</a>
