--- a/src/main/resources/templates/user/main/main.html
+++ b/src/main/resources/templates/user/main/main.html
@@ -1,10 +1,81 @@
 <!DOCTYPE html>
-<html lang="ko"
-	  xmlns:th="http://www.thymeleaf.org"
-	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	  layout:decorate="~{/user/common/layout/mainLayout}"
-	  layout:fragment="Content">
-<div>
-	메인
-</div>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{/user/common/layout/mainLayout}" layout:fragment="Content">
+
+<!-- SWIPER 외부 라이브러리 연결-->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+<link rel="stylesheet" href="/user/main/css/main.css" />
+
+
+<section class="hero">
+	<!-- Slider main container -->
+	<div class="swiper slide-wrap">
+		<!-- Additional required wrapper -->
+		<div class="swiper-wrapper">
+			<!-- Slides -->
+			<div class="swiper-slide">
+				<img src="/user/main/img/배너1.png" alt="배너1">
+			</div>
+			<div class="swiper-slide">
+				<img src="/user/main/img/배너2.png" alt="배너2">
+			</div>
+			<div class="swiper-slide">
+				<img src="/user/main/img/배너3.png" alt="배너3" />
+			</div>
+			<div class="swiper-slide">
+				<img src="/user/main/img/배너4.png" alt="배너4" />
+			</div>
+		</div>
+
+		<div class="swiper-pagination pagination-btns">
+			<span class="swiper-pagination-bullet"></span>
+		</div>
+
+	</div>
+</section>
+
+<section class="section section-best-seller section-wrapper">
+	<div class="section-header">
+		<h2 class="section-title">9월의 베스트셀러</h2>
+		<p class="section-title-emoji">🏆</p>
+	</div>
+	<div id="best-seller-wrapper" class="section-content-books-wrapper"></div>
+</section>
+
+
+<section class="section section-new-book section-wrapper">
+	<div class="section-header">
+		<h2 class="section-title">화제의 신간</h2>
+		<p class="section-title-emoji">🔥</p>
+	</div>
+	<div id="new-books-wrapper" class="section-content-books-wrapper">
+		<div class="section-content-book"></div>
+		<div class="section-content-book"></div>
+		<div class="section-content-book"></div>
+		<div class="section-content-book"></div>
+		<div class="section-content-book"></div>
+	</div>
+</section>
+
+<section class="section section-high-rated section-wrapper">
+	<div class="section-header">
+		<h2 class="section-title">평점이 높은 책</h2>
+		<p class="section-title-emoji">🌟</p>
+	</div>
+	<div id="high-rated-wrapper" class="section-content-books-wrapper"></div>
+</section>
+
+<section class="section section-recommend-books section-wrapper">
+	<div class="section-header">
+		<h2 class="section-title">이런 책은 어떠세요?</h2>
+		<p class="section-title-emoji">👀</p>
+	</div>
+	<div id="recommend-books-wrapper" class="section-content-books-wrapper"></div>
+</section>
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+<script src="/user/main/js/main.js"></script>
 </html>
