--- a/src/main/resources/templates/user/main/products/detail.html
+++ b/src/main/resources/templates/user/main/products/detail.html
@@ -5,88 +5,122 @@
       layout:decorate="~{/user/common/layout/mainLayout}"
       layout:fragment="Content">
 
-<div id="product-info-container">
-    <div class="book-order-info">
-        <div class="book-img-wrap">
-            <img src="/amin/common/img/products/9791191061048.jpg" alt="책사진">
-        </div>
-        <div class="book-info-text">
-            <p class="book-title">이 중 하나는 거짓말</p>
-            <p class="author-name">김애란</p>
-            <div class="publish-info-wrap">
-                <p class="publish">문학동네</p>
-                <p class="publish-date">2024-09-07</p>
-            </div>
-            <p class="book-price">16,000원</p>
-            <div class="deliver-info">
-                <p>배송안내</p>
-                <p>무료배송</p>
-            </div>
-            <div class="select-qty">
-                <div class="reduce-qty">
-                    <i class="fa-solid fa-minus"></i>
-                    <input type="number" max="999" id="" class="input-qty" value="0" />
-                    <i class="fa-solid fa-plus"></i>
-                </div>
-                <p class="total-price">16,000원</p>
-            </div>
-            <div class="order-btn-wrap">
-                <button class="default-btn border">장바구니</button>
-                <button class="default-btn">바로구매</button>
-            </div>
-        </div>
-    </div>
+<link rel="stylesheet" href="/user/products/css/detail.css">
 
-    <div class="book-default-info">
-        <p class="info-title">기본 정보</p>
-        <div class="default-info-wrap">
-            <p class="info-subtitle">ISBN</p>
-            <p class="info-text">9791168473690</p>
-        </div>
-        <div class="default-info-wrap">
-            <p class="info-subtitle">발행(출시)일자</p>
-            <p class="info-text">2023년 03월 02일</p>
-        </div>
-        <div class="default-info-wrap">
-            <p class="info-subtitle">출판사</p>
-            <p class="info-text">문학동네</p>
-        </div>
-    </div>
-    <div class="book-default-info">
-        <p class="info-title">책 소개</p>
-        <div class="default-info-wrap">
-            <p class="info-subtitle">이 책이 속한 분야</p>
-            <p class="info-text">국내 > 소설</p>
-        </div>
-        <p class="book-intro">
-            아야야야러댤더더
-        </p>
-    </div>
-    <div class="book-default-info">
-        <p class="info-title">저자소개</p>
-        <div class="default-info-wrap">
-            <div class="authour-img">
-                <img src="/user/products/img/author-icon.svg" alt="저자이미지">
+<div class="inner">
+    <div id="product-info-container">
+        <div class="book-order-info">
+            <div class="book-img-wrap">
+                <img src="/amin/common/img/products/9791191061048.jpg" alt="책사진">
             </div>
-            <p class="info-subtitle">저자</p>
-            <p class="info-text">김애란</p>
-        </div>
-    </div>
-    <div class="review-info">
-        <p class="info-title">도서리뷰(10)</p>
-        <div class="review-detail">
-            <div class="user-score">
-                <p>사용자 총점</p>
-                <div class="star-wrap">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
+            <div class="book-info-text">
+                <p class="book-title">이 중 하나는 거짓말</p>
+                <p class="author-name">김애란</p>
+                <div class="publish-info-wrap">
+                    <p class="publish">문학동네</p>
+                    <p class="publish-date">2024-09-07</p>
+                </div>
+                <p class="book-price">16,000원</p>
+                <div class="deliver-info">
+                    <p>배송안내</p>
+                    <p>무료배송</p>
+                </div>
+                <div class="select-qty">
+                    <div class="reduce-qty">
+                        <i class="fa-solid fa-minus"></i>
+                        <input type="number" max="999" id="" class="input-qty" value="0"/>
+                        <i class="fa-solid fa-plus"></i>
+                    </div>
+                    <p class="total-price">16,000원</p>
+                </div>
+                <div class="order-btn-wrap">
+                    <button class="default-btn border">장바구니</button>
+                    <button class="default-btn">바로구매</button>
                 </div>
             </div>
         </div>
-    </div>
 
+        <div class="book-default-info">
+            <p class="info-title">기본 정보</p>
+            <div class="default-info-wrap">
+                <p class="info-subtitle">ISBN</p>
+                <p class="info-text">9791168473690</p>
+            </div>
+            <div class="default-info-wrap">
+                <p class="info-subtitle">발행(출시)일자</p>
+                <p class="info-text">2023년 03월 02일</p>
+            </div>
+            <div class="default-info-wrap">
+                <p class="info-subtitle">출판사</p>
+                <p class="info-text">문학동네</p>
+            </div>
+        </div>
+        <div class="book-default-info">
+            <p class="info-title">책 소개</p>
+            <div class="default-info-wrap">
+                <p class="info-subtitle">이 책이 속한 분야</p>
+                <p class="info-text">국내 > 소설</p>
+            </div>
+            <p class="book-intro">
+                아야야야러댤더더
+            </p>
+        </div>
+        <div class="book-default-info">
+            <p class="info-title">저자소개</p>
+            <div class="default-info-wrap">
+                <div class="authour-img">
+                    <img src="/user/products/img/author-icon.svg" alt="저자이미지">
+                </div>
+                <p class="info-subtitle">저자</p>
+                <p class="info-text">김애란</p>
+            </div>
+        </div>
+        <div class="review-info">
+            <p class="info-title">도서리뷰(10)</p>
+            <div class="review-detail">
+                <div class="user-score">
+                    <p>사용자 총점</p>
+                    <div class="star-wrap">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--    <div class="inner">-->
+        <!--        <p class="result-text">'ㅇ러댈ㅈㄷㄹ'에 대한 검색결과 입니다</p>-->
+        <!--        <div class="re-search-bar">-->
+        <!--            <input type="text" name="" id="" class="re-search-input" placeholder="결과 내 재검색"/>-->
+        <!--            <i class="fa-solid fa-magnifying-glass"></i>-->
+        <!--        </div>-->
+
+        <!--        <div class="publish-list">-->
+        <!--            출판사-->
+        <!--        </div>-->
+        <!--        <div class="sort-list">-->
+        <!--            분야-->
+        <!--        </div>-->
+
+        <!--        <div class="result-filter">-->
+        <!--            <p class="result-cnt">전체 0건</p>-->
+        <!--            <div class="sort-pick">-->
+        <!--                <p>판매량</p>-->
+        <!--                <p>뭐시기</p>-->
+        <!--            </div>-->
+        <!--            <button class="default-btn">장바구니담기</button>-->
+        <!--        </div>-->
+        <!--        <div class="result-wrap">-->
+        <!--            <p>!</p>-->
+        <!--            <span>검색결과가 없습니다</span>-->
+        <!--        </div>-->
+
+        <!--    </div>-->
+
+
+    </div>
 </div>
 </html>
