--- a/src/main/resources/static/user/common/css/common.css
+++ b/src/main/resources/static/user/common/css/common.css
@@ -1,7 +1,7 @@
 .inner {
     width: 1280px;
     margin: 20px auto 50px;
-    height: 100vh;
+    height: 100%;
     min-height: 100%;
     padding: 0 55px;
 }
