Feat: 상품상세페이지 / Design: common css inner 수정

--- a/src/main/resources/templates/user/main/sample.html
+++ b/src/main/resources/templates/user/main/sample.html
@@ -139,5 +139,6 @@
 
 <script src="/user/common/js/btn-event.js"></script>
 <script src="/user/common/js/main.js"></script>
+<script src="/user/common/js/sample.js"></script>
 </body>
 </html>
