--- a/src/main/resources/static/user/products/css/detail.css
+++ b/src/main/resources/static/user/products/css/detail.css
@@ -1,13 +1,97 @@
-.result-text {
-    font-size: 24px;
-    margin-bottom: 65px;
+#product-info-container {
+    padding: 0 200px;
 }
 
-.re-search-bar {
-    float: right;
+.book-order-info {
+    display: grid;
+    grid-template-columns: 400px auto;
+    justify-content: space-between;
+}
+.book-img-wrap {
+    width: 380px;
+    height: 572px;
+    box-shadow: 0 20px 60px rgba(0, 0, 0, 0.25);
 }
 
-.publish-list, .sort-list {
+.book-img-wrap img {
     width: 100%;
-    height: 60px;
+    height: 100%;
+}
+
+.book-info-text {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.book-title {
+    font-size: 28px;
+    font-weight: 700;
+}
+
+.author-name {
+    font-weight: 700;
+    margin-bottom: 5px
+}
+
+.publish-wrap {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 14px;
+    color: #7E7E7E;
+}
+
+.publish {
+    position: relative;
+}
+
+.publish::after {
+    position: absolute;
+    content: "•";
+    top: 1px;
+    right: -7px;
+    font-size: 10px;
+}
+
+.publish-review-wrap {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.review-avg-wrap {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    padding: 20px;
+    border: .5px solid #C0C0C0;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.price-wrap {
+    display: flex;
+    align-items: flex-end;
+    font-size: 28px;
+}
+
+.book-price {
+    font-weight: 700;
+}
+
+.deliver-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* 채워진 별 색상 */
+.fa-solid.fa-star {
+    color: #845EC2; /* 채워진 별 색상 */
+}
+
+/* 빈 별 색상 */
+.fa-regular.fa-star {
+    color: #B0A8B9;
 }
