--- a/src/main/resources/templates/user/main/products/detail.html
+++ b/src/main/resources/templates/user/main/products/detail.html
@@ -11,16 +11,35 @@
     <div id="product-info-container">
         <div class="book-order-info">
             <div class="book-img-wrap">
-                <img src="/amin/common/img/products/9791191061048.jpg" alt="책사진">
+                <img th:attr="src=${bookDetail.book_thumbnail_changed != null ? '/images/books/' + bookDetail.book_thumbnail_changed : '/images/books/noimg.png'}"
+                     alt="책사진">
             </div>
             <div class="book-info-text">
-                <p class="book-title">이 중 하나는 거짓말</p>
-                <p class="author-name">김애란</p>
-                <div class="publish-info-wrap">
-                    <p class="publish">문학동네</p>
-                    <p class="publish-date">2024-09-07</p>
+                <p class="book-title">[[${bookDetail.book_name}]]</p>
+                <div class="publish-review-wrap">
+                    <div class="publish-info-wrap">
+                        <p class="author-name" th:text="${bookDetail.book_author + ' 저'}"></p>
+                        <div class="publish-wrap">
+                            <p class="publish">[[${bookDetail.book_publisher}]]</p>
+                            <p class="publish-date" th:text="${#dates.format(bookDetail.book_publish_date, 'yyyy-MM-dd')}"></p>
+                        </div>
+                    </div>
+                    <div class="review-avg-wrap">
+                        <p class="star-avg">[[${bookDetail.reviews_rating_avg}]]</p>
+                        <div class="star-wrap">
+                            <i class="fa-star" th:classappend="${bookDetail.reviews_rating_avg >= 1 ? 'fa-solid' : 'fa-regular'}"></i>
+                            <i class="fa-star" th:classappend="${bookDetail.reviews_rating_avg >= 2 ? 'fa-solid' : 'fa-regular'}"></i>
+                            <i class="fa-star" th:classappend="${bookDetail.reviews_rating_avg >= 3 ? 'fa-solid' : 'fa-regular'}"></i>
+                            <i class="fa-star" th:classappend="${bookDetail.reviews_rating_avg >= 4 ? 'fa-solid' : 'fa-regular'}"></i>
+                            <i class="fa-star" th:classappend="${bookDetail.reviews_rating_avg >= 5 ? 'fa-solid' : 'fa-regular'}"></i>
+                        </div>
+                        <p class="review-text" th:text="'(' + ${bookDetail.review_rating_cnt} + '개의 리뷰)'"></p>
+                    </div>
                 </div>
-                <p class="book-price">16,000원</p>
+                <div class="price-wrap">
+                    <p class="book-price" th:text="${#numbers.formatInteger(bookDetail.book_price, 0, 'COMMA')}"></p>
+                    <p class="currency">원</p>
+                </div>
                 <div class="deliver-info">
                     <p>배송안내</p>
                     <p>무료배송</p>
@@ -31,7 +50,7 @@
                         <input type="number" max="999" id="" class="input-qty" value="0"/>
                         <i class="fa-solid fa-plus"></i>
                     </div>
-                    <p class="total-price">16,000원</p>
+                    <p class="total-price"></p>
                 </div>
                 <div class="order-btn-wrap">
                     <button class="default-btn border">장바구니</button>
@@ -44,25 +63,26 @@
             <p class="info-title">기본 정보</p>
             <div class="default-info-wrap">
                 <p class="info-subtitle">ISBN</p>
-                <p class="info-text">9791168473690</p>
+                <p class="info-text">[[${bookDetail.book_isbn}]]</p>
             </div>
             <div class="default-info-wrap">
                 <p class="info-subtitle">발행(출시)일자</p>
-                <p class="info-text">2023년 03월 02일</p>
+                <p class="info-text" th:text="${#dates.format(bookDetail.book_publish_date, 'yyyy-MM-dd')}"></p>
             </div>
             <div class="default-info-wrap">
                 <p class="info-subtitle">출판사</p>
-                <p class="info-text">문학동네</p>
+                <p class="info-text">[[${bookDetail.book_publisher}]]</p>
             </div>
         </div>
         <div class="book-default-info">
             <p class="info-title">책 소개</p>
             <div class="default-info-wrap">
                 <p class="info-subtitle">이 책이 속한 분야</p>
-                <p class="info-text">국내 > 소설</p>
+                <p class="info-text" th:text="${bookDetail.book_country_type == '01' ? '국내' : '국외'}"></p>
+                <p class="info-text">[[${bookDetail.book_category}]]</p>
             </div>
             <p class="book-intro">
-                아야야야러댤더더
+               [[${bookDetail.book_intro}]]
             </p>
         </div>
         <div class="book-default-info">
@@ -72,55 +92,93 @@
                     <img src="/user/products/img/author-icon.svg" alt="저자이미지">
                 </div>
                 <p class="info-subtitle">저자</p>
-                <p class="info-text">김애란</p>
+                <p class="info-text">[[${bookDetail.book_author}]]</p>
             </div>
         </div>
         <div class="review-info">
-            <p class="info-title">도서리뷰(10)</p>
+            <p class="info-title" th:text="'도서리뷰(' + ${bookDetail.review_rating_cnt} + ')'"></p>
             <div class="review-detail">
                 <div class="user-score">
                     <p>사용자 총점</p>
                     <div class="star-wrap">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-star" th:classappend="${bookDetail.reviews_rating_avg >= 1 ? 'fa-solid' : 'fa-regular'}"></i>
+                        <i class="fa-star" th:classappend="${bookDetail.reviews_rating_avg >= 2 ? 'fa-solid' : 'fa-regular'}"></i>
+                        <i class="fa-star" th:classappend="${bookDetail.reviews_rating_avg >= 3 ? 'fa-solid' : 'fa-regular'}"></i>
+                        <i class="fa-star" th:classappend="${bookDetail.reviews_rating_avg >= 4 ? 'fa-solid' : 'fa-regular'}"></i>
+                        <i class="fa-star" th:classappend="${bookDetail.reviews_rating_avg >= 5 ? 'fa-solid' : 'fa-regular'}"></i>
+                    </div>
+                </div>
+                <div class="user-score-avg">
+                    <p class="score-avg" th:text="${bookDetail.reviews_rating_avg}"></p>
+                    <p class="slash">/</p>
+                    <p class="full-score">5</p>
+                </div>
+                <div class="rating-bar-wrap">
+                    <div class="rating-bar">
+                        <i class="fa-star fa-solid"></i>
+                        <i class="fa-star fa-solid"></i>
+                        <i class="fa-star fa-solid"></i>
+                        <i class="fa-star fa-solid"></i>
+                        <i class="fa-star fa-solid"></i>
+                    </div>
+                    <div class="rating-bar">
+                        <i class="fa-star fa-solid"></i>
+                        <i class="fa-star fa-solid"></i>
+                        <i class="fa-star fa-solid"></i>
+                        <i class="fa-star fa-solid"></i>
+                        <i class="fa-star fa-regular"></i>
+                    </div>
+                    <div class="rating-bar">
+                        <i class="fa-star fa-solid"></i>
+                        <i class="fa-star fa-solid"></i>
+                        <i class="fa-star fa-solid"></i>
+                        <i class="fa-star fa-regular"></i>
+                        <i class="fa-star fa-regular"></i>
+                    </div>
+                    <div class="rating-bar">
+                        <i class="fa-star fa-solid"></i>
+                        <i class="fa-star fa-solid"></i>
+                        <i class="fa-star fa-regular"></i>
+                        <i class="fa-star fa-regular"></i>
+                        <i class="fa-star fa-regular"></i>
+                    </div>
+                    <div class="rating-bar">
+                        <i class="fa-star fa-solid"></i>
+                        <i class="fa-star fa-regular"></i>
+                        <i class="fa-star fa-regular"></i>
+                        <i class="fa-star fa-regular"></i>
+                        <i class="fa-star fa-regular"></i>
+                    </div>
+                </div>
+                <div class="review-list">
+                    <p class="all-reviews">전체리뷰</p>
+                    <div class="review-content" th:each="reviewList: ${reviewList}">
+                        <div class="user-wrap">
+                            <p>[[${reviewList.member_id}]]</p>
+                            <p th:text="${#dates.format(reviewList.review_write_date, 'yyyy-MM-dd')}"></p>
+                        </div>
+                        <p>[[${reviewList.review_rating}]]</p>
+                        <div class="user-star-wrap">
+                            <i class="fa-star" th:classappend="${reviewList.review_rating >= 1 ? 'fa-solid' : 'fa-regular'}"></i>
+                            <i class="fa-star" th:classappend="${reviewList.review_rating >= 2 ? 'fa-solid' : 'fa-regular'}"></i>
+                            <i class="fa-star" th:classappend="${reviewList.review_rating >= 3 ? 'fa-solid' : 'fa-regular'}"></i>
+                            <i class="fa-star" th:classappend="${reviewList.review_rating >= 4 ? 'fa-solid' : 'fa-regular'}"></i>
+                            <i class="fa-star" th:classappend="${reviewList.review_rating >= 5 ? 'fa-solid' : 'fa-regular'}"></i>
+                        </div>
+                        <p class="review-text">[[${reviewList.review_content}]]</p>
                     </div>
                 </div>
             </div>
         </div>
-
-        <!--    <div class="inner">-->
-        <!--        <p class="result-text">'ㅇ러댈ㅈㄷㄹ'에 대한 검색결과 입니다</p>-->
-        <!--        <div class="re-search-bar">-->
-        <!--            <input type="text" name="" id="" class="re-search-input" placeholder="결과 내 재검색"/>-->
-        <!--            <i class="fa-solid fa-magnifying-glass"></i>-->
-        <!--        </div>-->
-
-        <!--        <div class="publish-list">-->
-        <!--            출판사-->
-        <!--        </div>-->
-        <!--        <div class="sort-list">-->
-        <!--            분야-->
-        <!--        </div>-->
-
-        <!--        <div class="result-filter">-->
-        <!--            <p class="result-cnt">전체 0건</p>-->
-        <!--            <div class="sort-pick">-->
-        <!--                <p>판매량</p>-->
-        <!--                <p>뭐시기</p>-->
-        <!--            </div>-->
-        <!--            <button class="default-btn">장바구니담기</button>-->
-        <!--        </div>-->
-        <!--        <div class="result-wrap">-->
-        <!--            <p>!</p>-->
-        <!--            <span>검색결과가 없습니다</span>-->
-        <!--        </div>-->
-
-        <!--    </div>-->
-
-
+        <div class="refund-info-container">
+            <p class="info-text">교환/반품/품절 안내</p>
+            <div class="refund-btn-wrap">
+                <button class="default-btn border">반품신청</button>
+                <button class="default-btn">1:1문의</button>
+            </div>
+        </div>
     </div>
 </div>
+
+<script src="/user/products/js/detail.js"></script>
 </html>
