--- a/src/main/resources/static/user/products/css/detail.css
+++ b/src/main/resources/static/user/products/css/detail.css
@@ -1,12 +1,14 @@
 #product-info-container {
-    padding: 0 200px;
+    padding: 90px 145px 0;
 }
 
 .book-order-info {
     display: grid;
-    grid-template-columns: 400px auto;
+    grid-template-columns: 400px 400px;
     justify-content: space-between;
+    margin-bottom: 70px;
 }
+
 .book-img-wrap {
     width: 380px;
     height: 572px;
@@ -61,6 +63,7 @@
 }
 
 .review-avg-wrap {
+    width: 164px;
     display: flex;
     flex-direction: column;
     gap: 5px;
@@ -70,10 +73,25 @@
     text-align: center;
 }
 
+.star-avg {
+    color: #845EC2;
+    font-weight: 700;
+}
+
+.total-review-cnt {
+    font-size: 14px;
+    color: #7E7E7E;
+}
+
+.rating-count {
+    color: #000;
+}
+
 .price-wrap {
     display: flex;
     align-items: flex-end;
     font-size: 28px;
+    margin-bottom: 20px;
 }
 
 .book-price {
@@ -84,6 +102,176 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-top: .5px solid #C0C0C0;
+    border-bottom: .5px solid #C0C0C0;
+    padding: 20px 0;
+}
+
+.deliver-info p:first-child {
+    font-weight: 700;
+}
+
+.select-order {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+.price-wrap.total {
+    font-size: 24px;
+}
+
+.total-price {
+    font-weight: 700;
+}
+
+.order-btn-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 10px;
+}
+
+.default-btn {
+    width: 120px;
+    height: 50px;
+}
+
+.book-default-info {
+    margin-bottom: 50px;
+    padding-bottom: 35px;
+    border-bottom: 1px solid #C0C0C0;
+}
+
+.info-title {
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 35px;
+}
+
+.info-list {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.default-info-wrap {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 180px 1fr;
+    gap: 20px;
+    padding: 0 20px;
+}
+
+.info-subtitle {
+    font-weight: 700;
+}
+
+.book-category, .book-author-wrap {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.book-category p:first-child::after {
+    content: ">";
+    padding-left: 15px;
+}
+
+.book-intro {
+    margin-top: 30px;
+    padding: 0 20px;
+    line-height: 30px;
+}
+
+.review-info {
+    margin-bottom: 130px;
+}
+
+.review-chart-wrap {
+    width: 100%;
+    padding: 30px 50px;
+    margin-bottom: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #FAFAFA;
+    border: 1px solid #C0C0C0;
+    border-radius: 10px;
+}
+.user-score {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+.user-score p {
+    font-weight: 700;
+}
+
+.user-score .score-avg {
+    color: #845EC2;
+}
+
+.user-score .slash {
+    color: #CCCCCC;
+}
+.user-score .full-score {
+    color: #7E7E7E;
+}
+
+.user-score-avg {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+
+.all-reviews {
+    width: 100%;
+    height: 40px;
+    /*margin-bottom: 20px;*/
+    border-bottom: 1px solid #C0C0C0;
+}
+
+.all-reviews p {
+    width: max-content;
+    height: 100%;
+    padding: 10px;
+    border-bottom: 2px solid #000;
+}
+
+.review-content {
+    width: 100%;
+    height: 155px;
+    padding: 10px 20px;
+    /*border-top: 1px solid #C0C0C0;*/
+    border-bottom: 1px solid #C0C0C0;
+}
+
+.content-head {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.user-wrap {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    font-size: 12px;
+    color: #c0c0c0;
+    margin-bottom: 20px;
+}
+
+.user-wrap .member-id {
+    position: relative;
+}
+
+.user-wrap .member-id::after {
+    position: absolute;
+    content: "ㅣ";
+    font-size: 10px;
 }
 
 /* 채워진 별 색상 */
@@ -94,4 +282,38 @@
 /* 빈 별 색상 */
 .fa-regular.fa-star {
     color: #B0A8B9;
+}
+
+/* 교환반품 안내 */
+.refund-info-container {
+    margin-bottom: 20px;
+}
+.info-header {
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    border-bottom: 1px solid #000;
+}
+
+.info-header .info-title {
+    margin-bottom: 0;
+}
+
+.refund-info-list {
+    padding: 30px 0;
+    border-bottom: 1px solid #C0C0C0;
+}
+
+.refund-info-title {
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.warning-info-box {
+    width: 100%;
+    border-radius: 10px;
+    padding: 30px 0 30px 30px;
+    background-color: #FAFAFA;
+    color: #7E7E7E;
 }
