--- a/src/main/resources/templates/user/common/fragments/header.html
+++ b/src/main/resources/templates/user/common/fragments/header.html
@@ -4,95 +4,96 @@
 
 
 <!-- 메인 헤더 -->
-<div class="header-top">
-	<div class="top-menu-wrap">
-		<a href="" class="top-menu-link">로그인</a> <a href="" class="top-menu-link">장바구니</a> <a href="" class="top-menu-link">1:1문의</a>
-	</div>
-</div>
-
-<div class="header-center">
-	<div class="logo-searchbar">
-		<a href="./main"> <img src="/user/common/imgs/web-header-logo.svg" alt="로고" class="logo-img">
-		</a>
-		<div class="searchbar">
-			<input type="text" name="searchKeyword" class="search-input"> <i class="fa-solid fa-magnifying-glass search-icon"></i>
+<div class="header-inner">
+	<div class="header-top">
+		<div class="top-menu-wrap">
+			<a href="" class="top-menu-link">로그인</a> <a href="" class="top-menu-link">장바구니</a> <a href="" class="top-menu-link">1:1문의</a>
 		</div>
 	</div>
 
-	<div class="searchbar-right">
-		<a href="" class="cart-icon-wrap"> <img src="/user/common/imgs/web-cart-icon.svg" alt="장바구니" class="cart-icon">
-			<div class="cart-qty">
-				<p></p>
-			</div>
-		</a> <a href=""> <i class="fa-solid fa-circle-user user-icon"></i>
-		</a>
-	</div>
-</div>
-
-<!-- 카테고리 -->
-<nav class="category-wrap">
-	<div class="nav-all-categories-wrap">
-		<div class="nav-all-categories">
-			<img src="/user/common/imgs/category-list-button.svg" alt="카테고리목록" class="all-categories-icon">
-		</div>
-		<div class="category-modal"></div>
-	</div>
-
-	<ul class="nav-category-list">
-		<li><a href="" class="nav-category-item">국내도서</a></li>
-		<li><a href="" class="nav-category-item">외국도서</a></li>
-		<li><a href="" class="nav-category-item">베스트</a></li>
-		<li><a href="" class="nav-category-item">신상품</a></li>
-	</ul>
-</nav>
-
-<!-- 스크롤 시 고정되는 헤더 -->
-<div class="header-fixed">
-	<div class="fixed-item-wrap">
-		<div class="all-categories-wrap">
-			<div class="nav-all-categories">
-				<img src="/user/common/imgs/category-list-button.svg" alt="카테고리목록" class="all-categories-icon">
+	<div class="header-center">
+		<div class="logo-searchbar">
+			<a href="./main"> <img src="/user/common/imgs/web-header-logo.svg" alt="로고" class="logo-img">
+			</a>
+			<div class="searchbar">
+				<input type="text" name="searchKeyword" class="search-input"> <i class="fa-solid fa-magnifying-glass search-icon"></i>
 			</div>
 		</div>
-		<img src="/user/common/imgs/web-fixed-header-logo.svg" alt="로고" class="header-fixed-logo-img">
-		<div class="searchbar">
-			<input type="text" name="searchKeyword" class="search-input"> <i class="fa-solid fa-magnifying-glass search-icon"></i>
-		</div>
-		<div class="header-fixed-right">
+
+		<div class="searchbar-right">
 			<a href="" class="cart-icon-wrap"> <img src="/user/common/imgs/web-cart-icon.svg" alt="장바구니" class="cart-icon">
 				<div class="cart-qty">
 					<p></p>
 				</div>
-			</a> 
-			<a href=""> <i class="fa-solid fa-circle-user user-icon"></i></a> 
-			<a href=""> <img src="/user/common/imgs/web-cs-icon.svg" alt="고객센터" class="cs-icon"></a>
+			</a> <a href=""> <i class="fa-solid fa-circle-user user-icon"></i>
+		</a>
 		</div>
 	</div>
-</div>
+	<!-- 카테고리 -->
+	<nav class="category-wrap">
+		<div class="nav-all-categories-wrap">
+			<div class="nav-all-categories">
+				<img src="/user/common/imgs/category-list-button.svg" alt="카테고리목록" class="all-categories-icon">
+			</div>
+			<div class="category-modal"></div>
+		</div>
 
-<!-- 전체 카테고리 모달-->
-<div id="categoryModal" class="all-category-modal">
-	<div class="category-modal-content">
-		<div class="modal-category-list">
-			<div class="modal-category-item-wrap">
-				<a href="" class="modal-category-item active">국내도서</a>
-				<div class="modal-category-icon">
-					<i class="fa-solid fa-chevron-right"></i>
+		<ul class="nav-category-list">
+			<li><a href="" class="nav-category-item">국내도서</a></li>
+			<li><a href="" class="nav-category-item">외국도서</a></li>
+			<li><a href="" class="nav-category-item">베스트</a></li>
+			<li><a href="" class="nav-category-item">신상품</a></li>
+		</ul>
+	</nav>
+
+	<!-- 스크롤 시 고정되는 헤더 -->
+	<div class="header-fixed">
+		<div class="fixed-item-wrap">
+			<div class="all-categories-wrap">
+				<div class="nav-all-categories">
+					<img src="/user/common/imgs/category-list-button.svg" alt="카테고리목록" class="all-categories-icon">
 				</div>
 			</div>
-			<div class="modal-category-item-wrap">
-				<a href="" class="modal-category-item">외국도서</a>
-				<div class="modal-category-icon">
-					<i class="fa-solid fa-chevron-right"></i>
-				</div>
+			<img src="/user/common/imgs/web-fixed-header-logo.svg" alt="로고" class="header-fixed-logo-img">
+			<div class="searchbar">
+				<input type="text" name="searchKeyword" class="search-input"> <i class="fa-solid fa-magnifying-glass search-icon"></i>
+			</div>
+			<div class="header-fixed-right">
+				<a href="" class="cart-icon-wrap"> <img src="/user/common/imgs/web-cart-icon.svg" alt="장바구니" class="cart-icon">
+					<div class="cart-qty">
+						<p></p>
+					</div>
+				</a>
+				<a href=""> <i class="fa-solid fa-circle-user user-icon"></i></a>
+				<a href=""> <img src="/user/common/imgs/web-cs-icon.svg" alt="고객센터" class="cs-icon"></a>
 			</div>
 		</div>
-		<div class="modal-categories-wrap">
-			<div class="modal-categories" id="modal-categories-kor">
-				<a href="" class="modal-category-detail">소설</a> <a href="" class="modal-category-detail">요리</a> <a href="" class="modal-category-detail">건강</a> <a href="" class="modal-category-detail">인문</a> <a href="" class="modal-category-detail">경제/경영</a> <a href="" class="modal-category-detail">역사/문화</a> <a href="" class="modal-category-detail">중/고등참고서</a> <a href="" class="modal-category-detail">청소년</a> <a href="" class="modal-category-detail">기술/공학</a> <a href="" class="modal-category-detail">과학</a> <a href="" class="modal-category-detail">여행</a> <a href="" class="modal-category-detail">자기계발</a>
+	</div>
+
+	<!-- 전체 카테고리 모달-->
+	<div id="categoryModal" class="all-category-modal">
+		<div class="category-modal-content">
+			<div class="modal-category-list">
+				<div class="modal-category-item-wrap">
+					<a href="" class="modal-category-item active">국내도서</a>
+					<div class="modal-category-icon">
+						<i class="fa-solid fa-chevron-right"></i>
+					</div>
+				</div>
+				<div class="modal-category-item-wrap">
+					<a href="" class="modal-category-item">외국도서</a>
+					<div class="modal-category-icon">
+						<i class="fa-solid fa-chevron-right"></i>
+					</div>
+				</div>
 			</div>
-			<div class="modal-categories" id="modal-categories-foreign">
-				<a href="" class="modal-category-detail">경제/경영</a> <a href="" class="modal-category-detail">문학</a> <a href="" class="modal-category-detail">생활/요리/건강</a> <a href="" class="modal-category-detail">어린이/ELT</a> <a href="" class="modal-category-detail">과학기술</a>
+			<div class="modal-categories-wrap">
+				<div class="modal-categories" id="modal-categories-kor">
+					<a href="" class="modal-category-detail">소설</a> <a href="" class="modal-category-detail">요리</a> <a href="" class="modal-category-detail">건강</a> <a href="" class="modal-category-detail">인문</a> <a href="" class="modal-category-detail">경제/경영</a> <a href="" class="modal-category-detail">역사/문화</a> <a href="" class="modal-category-detail">중/고등참고서</a> <a href="" class="modal-category-detail">청소년</a> <a href="" class="modal-category-detail">기술/공학</a> <a href="" class="modal-category-detail">과학</a> <a href="" class="modal-category-detail">여행</a> <a href="" class="modal-category-detail">자기계발</a>
+				</div>
+				<div class="modal-categories" id="modal-categories-foreign">
+					<a href="" class="modal-category-detail">경제/경영</a> <a href="" class="modal-category-detail">문학</a> <a href="" class="modal-category-detail">생활/요리/건강</a> <a href="" class="modal-category-detail">어린이/ELT</a> <a href="" class="modal-category-detail">과학기술</a>
+				</div>
 			</div>
 		</div>
 	</div>
