Feat : 회원정보 탈퇴 기능 구현

--- a/src/main/resources/static/user/common/css/header.css
+++ b/src/main/resources/static/user/common/css/header.css
@@ -113,7 +113,7 @@ header .header-center {
 }
 
 /* 카테고리 */
-nav {
+nav.category-wrap {
     display: flex;
     flex-direction: row;
     width: 100%;
