--- a/src/main/resources/templates/user/mypage/member_del/memberDel.html
+++ b/src/main/resources/templates/user/mypage/member_del/memberDel.html
@@ -8,9 +8,9 @@
 	  <link rel="stylesheet" href="/user/mypage/css/memberUpdate.css" />
 	  <link rel="stylesheet" href="/user/mypage/css/eyeIcon.css"/>
 	  <link rel="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-      
+
 <div class="content">
-	<span class="middle-font">회원정보수정</span>
+	<span class="middle-font">회원탈퇴</span>
 		<div class="pw-box">
 			<form action="/user/mypage/checkPw" method="POST">
 				<div class="pw-checkbox">
